[package]
name = "luotain-fp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
luotain-core = { path = "../luotain-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true
