[package]
name = "luotain-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
toml = "0.8"
regex = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
