[package]
name = "luotain-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "http2"] }
async-trait = "0.1"
tracing = "0.1"
# gRPC probe (feature-gated)
prost = { version = "0.13", optional = true }
prost-reflect = { version = "0.14", features = ["serde"], optional = true }
protox = { version = "0.7", optional = true }
bytes = { version = "1", optional = true }
toml = "0.8"
regex = "1"
walkdir = "2"

[features]
default = []
grpc = ["prost", "prost-reflect", "protox", "bytes"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
