[package]
name = "luotain-judge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
luotain-core = { path = "../luotain-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
