[package]
name = "luotain-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
luotain-core = { path = "../luotain-core" }
luotain-judge = { path = "../luotain-judge" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
ulid = "1.1"

[lints]
workspace = true
